# tsb

./: .gitignore  349-goal-add-rust-wasm-acceleration-coverage-for-core-functions.md  355-goal-349-add-rust-wasm-acceleration-coverage-for-core-functions.md  AGENTS.md  CLAUDE.md  README.md  autoloop-autoloop-tsb-perf-evolve.md  biome.json  build-tsb-pandas-typescript-migration.md  ci-signatures.jsonl  evergreen-notes.md  evergreen-pr-321.md  evergreen-pr-323.md  evergreen-pr-363.md  evergreen-pr-369.md  evergreen-pr-58.md  evergreen-pr-96.md  evergreen-pr-97.md  goal-349-add-rust-wasm-acceleration-coverage-for-core-functions.md  package.json  perf-comparison.md  pr-129.md  pr-154.md  pr-321.md  pr-323-state.md  pr-323.md  pr-328.md  pr-369-evergreen.md  pr-96-evergreen.md  pr-96.md  pr-97-evergreen.md  pr-97.md  pr-98.md  skill-outcomes.jsonl  tsb-perf-evolve.md  tsconfig.json  wasm-coverage.json
benchmarks/: results-wasm-core.json  results.json  run_benchmarks.sh
docs/: golden-snapshots.md
golden/: generate.py
playground/: acf_pacf.html  add_sub_mul_div.html  align.html  api_types.html  apply.html  arima.html  arrays.html  assign.html  astype.html  at_iat.html  attrs.html  avro.html  benchmarks.html  between.html  bootstrap.html  case_when.html  categorical_index.html  categorical_ops.html  clip_advanced.html  clip_with_bounds.html  combine.html  combine_first.html  compare.html  (+131 more)
rust/: Cargo.toml
rust/pkg/: package.json  tsb_wasm.d.ts  tsb_wasm.js  tsb_wasm_bg.wasm  tsb_wasm_bg.wasm.d.ts
rust/src/: lib.rs  natsort.rs  reductions.rs  rolling.rs  searchsorted.rs
(+1034 files in other folders)
